--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -27,6 +27,7 @@
                     {% endif %}
                 </div>
             </div>
+            <!-- Product information -->
             <div class="product-info-container col-12 col-md-5 col-lg-4">
                 <h3 id="product-title" class="mt-2">{{ product.name }}</h3>
                 <p class="basket-meta">{{ product.category.friendly_name }}</p>
@@ -65,6 +66,7 @@
                     <p>Free paperless returns</p>
                 </div>
                 {% endif %}
+                <!-- Size dropdown option depending on product type -->
                 <form action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="row form-row mt-4">
@@ -143,6 +145,7 @@
                         <div class="col-sm-12 col-md-5">
                             <p class="small">Quantity*</p>
                             {% csrf_token %}
+                            <!-- Modified from Batch Coffee details in README -->
                             <div class="form-group">
                                 <div class="input-group">
                                     <!-- Quantity selector -->
@@ -176,9 +179,9 @@
                             <input type="hidden" name="product_size" value="{{ item.size }}">
                             {% endif %}
                         </div>
+                        <!-- Action buttons -->
                         <div class="col-12 mt-4">
                             <input type="submit" class="btn btn-sm btn-blue basket-buttons" value="Add to basket">
-
                             <a href="{% url 'products' %}" class="btn btn-sm btn-grey basket-buttons">
                                 <span>Continue shopping</span>
                             </a>
@@ -195,6 +198,7 @@
                 <p>{{ product.description }}</p>
             </div>
         </div>
+        <!-- Review section -->
         <div class="row mt-5">
             <div class="col-12">
                 <h4>Reviews</h4>
