Update confirmation modal message

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -94,8 +94,8 @@
                                                      aria-label="Close"></button>
                                              </div>
                                              <div class="modal-body">
-                                                 <p class="text-center">Are you sure you want to delete
-                                                     {{ item.product.name }}?</p>
+                                                 <p class="text-center">Are you sure you want to remove {{ item.quantity }} 
+                                                     item(s) of {{ item.product.name }} from your basket?</p>
                                              </div>
                                              <div class="modal-footer">
                                                  <button type="button" class="btn btn-sm btn-grey"
