--- a/templates/base.html
+++ b/templates/base.html
@@ -183,7 +183,7 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <a href="" aria-label="Link to go to contact form"><h4>Contact us</h4></a>
+                        <a href="{% url 'contact' %}" aria-label="Link to go to contact form"><h4>Contact us</h4></a>
                     </div>
                 </div>
                 <div class="row">
