--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -29,7 +29,7 @@
                 {{ contact_form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Send</button>
-                    <a href="">
+                    <a href="{% url 'home' %}">
                         <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
