Change hover styling effects

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,14 +15,14 @@
     <div class="container">
         <div class="row gallery">
             <div class="col-6 offset-1 image-container">
-                <a href="">
+                <a href="{% url 'products' %}?category=surfboards,surf_equipment">
                     <img src="{{ MEDIA_URL }}surfing2-home.jpg" alt="" class="gallery-lg-img image">
                     <div class="image-grid-hover">
                         <div class="text">
-                            <h3>Are you ready to surf the wave?</h3>
-                            <span>Get the latest surfboards for your summer adventures</span>
-                            <div>
-                                <button class="btn">Shop now</button>
+                            <h3>Summer ready?</h3>
+                            <span>Check out the latest surf equipment</span>
+                            <div class="mt-2">
+                                <button class="btn gallery-btn">Shop now</button>
                             </div>
                             
                         </div>
@@ -30,32 +30,32 @@
                 </a>
             </div>
             <div class="col-4">
-                    <a href="">
+                    <a href="{% url 'products' %}?category=surfboards">
                         <img src="{{ MEDIA_URL }}surfboards2-home.jpg" alt="" class="gallery-sm-img">
                     </a>
-                    <a href="">
+                    <a href="{% url 'blogs' %}">
                         <img src="{{ MEDIA_URL }}ocean-home.jpg" alt="" class="gallery-sm-img">
                     </a>
             </div>
         </div>
         <div class="row gallery">
             <div class="col-4 offset-1">
-                <a href="">
+                <a href="{% url 'blogs' %}">
                     <img src="{{ MEDIA_URL }}surfboard-van-home.jpg" alt="" class="gallery-sm-img">
                 </a>
-                <a href="">
+                <a href="{% url 'products' %}?category=ladies_wetsuits">
                     <img src="{{ MEDIA_URL }}wetsuit-home.jpg" alt="" class="gallery-sm-img">
                 </a>
             </div>
             <div class="col-6 image-container">
-                <a href="">
+                <a href="{% url 'blogs' %}">
                     <img src="{{ MEDIA_URL }}surfing-home.jpg" alt="" class="gallery-lg-img image">
                     <div class="image-grid-hover">
                         <div class="text">
                             <h3>Solo Surfing</h3>
-                            <span>Check out our latest blogs</span>
-                            <div>
-                                <button class="btn">Read now</button>
+                            <span>Why don't you browse our latest blogs</span>
+                            <div class="mt-2">
+                                <button class="btn gallery-btn">Read now</button>
                             </div>
                             
                         </div>
