Amend further styling of home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
                             <h3>Summer ready?</h3>
                             <span>Check out the latest surf equipment</span>
                             <div class="mt-2">
-                                <button class="btn gallery-btn">Shop now</button>
+                                <button class="btn btn-sm gallery-btn">Shop now</button>
                             </div>
                             
                         </div>
@@ -55,7 +55,7 @@
                             <h3>Solo Surfing</h3>
                             <span>Why don't you browse our latest blogs</span>
                             <div class="mt-2">
-                                <button class="btn gallery-btn">Read now</button>
+                                <button class="btn btn-sm gallery-btn">Read now</button>
                             </div>
                             
                         </div>
