--- a/static/css/base.css
+++ b/static/css/base.css
@@ -265,6 +265,14 @@ a.category-badge>span.badge:hover {
     .product-info-container {
         margin-top: 35px;
     }
+
+    .text h3 {
+        font-size: 1.2rem;
+    }
+
+    .text span {
+        font-size: 0.7rem;
+    }
 }
 
 @media (max-width: 991px) {
