--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Inter:wght@300;400&family=Source+Sans+Pro:wght@600;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Archivo+Black&family=Inter&family=Source+Sans+Pro:wght@400;700&display=swap"
             rel="stylesheet">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
