--- a/static/css/base.css
+++ b/static/css/base.css
@@ -84,13 +84,20 @@ button:hover {
     margin: 0 5px;
 }
 
-.navbar-light .navbar-nav .nav-link:focus,
+.nav-link {
+    color: #30323d !important;
+}
+
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #feb751;
+    color: #feb751 !important;
 }
 
 .dropdown-menu {
     border: none;
+}
+
+button.navbar-toggler:hover {
+    background-color: #fff !important;
 }
 
 
@@ -277,7 +284,16 @@ a.category-badge>span.badge:hover {
 
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 134px;
+        padding-top: 180px;
+    }
+
+    .nav-link i,
+    .fas.fa-solid.fa-shopping-basket {
+        color: #fff !important;
+    }
+
+    #top-nav {
+        background-color: #30323d;
     }
 
     .image-container .image {
@@ -289,7 +305,7 @@ a.category-badge>span.badge:hover {
     }
 
     .text h3 {
-        font-size: 3rem;
+        font-size: 1.4rem;
     }
 }
 
