--- a/templates/base.html
+++ b/templates/base.html
@@ -115,16 +115,28 @@
             </div>
         </div>
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav id="top-nav" class="navbar navbar-expand py-0 px-2">
+                <div class="container-fluid px-0 justify-content-end">
+                    {% include 'includes/mobile-top-header.html' %}
+                </div>
+                
+            </nav>
+                
+        </div>
+        <div class="row">
+            <nav class="navbar navbar-light navbar-expand-lg">
+                <a href="{% url 'home' %}" class="d-lg-none">
+                    <h1 id="logo">Surf the Wave</h1>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                {% include 'includes/mobile-top-header.html' %}
+                
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div id="delivery-banner" class="row text-center">
+        <div id="delivery-banner" class="row text-center mb-3">
             <div class="col text-white">
                 <h5>Free delivery on orders over £{{ free_delivery_threshold }}!</h5>
             </div>
