--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,17 +1,15 @@
-<ul class="d-block d-lg-none">
+<ul class="navbar-nav mx-0 d-block d-lg-none">
     <li class="list-inline-item">
-        <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="text-center">
-                <div><i class="fas fa-search fa-lg"></i></div>
-            </div>
+        <a class="nav-link dropdown-center d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div><i class="fas fa-search"></i></div>
         </a>
-        <div class="dropdown-menu col-12 col-md-6 offset-md-3" aria-labelledby="mobile-search">
+        <div class="dropdown-menu" aria-labelledby="mobile-search">
             <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
                     <input class="form-control border border-$gray-500 rounded search-input" type="text" name="q" placeholder="I am looking for...">
                     <div class="input-group-append">
                         <button type="submit" class="form-control border-0">
-                            <span class="icon">
+                            <span>
                                 <i class="fas fa-search"></i>
                             </span>
                         </button>
@@ -20,10 +18,10 @@
             </form>
         </div>
     </li>
-    <li class="dropdown list-inline-item">
+    <li class="dropdown list-inline-item dropstart">
         <a class="nav-link d-block d-lg-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            <div><i class="fas fa-user fa-lg"></i></div>
+            <i class="fas fa-user"></i>
         </a>
         <ul class="dropdown-menu" aria-labelledby="user-options">
             {% if request.user.is_authenticated %}
@@ -43,7 +41,7 @@
     <li class="list-inline-item">
         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_basket' %}">
             <div class="text-center">
-                <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i><sup>{{ 0 }}</sup></div>
+                <div><i class="fas fa-solid fa-shopping-basket"></i><sup>{{ 0 }}</sup></div>
             </div>
         </a>
     </li>
