--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,7 +1,7 @@
 <ul class="navbar-nav mx-0 d-block d-lg-none">
     <li class="list-inline-item">
-        <a class="nav-link dropdown-center d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div><i class="fas fa-search"></i></div>
+        <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-search"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="mobile-search">
             <form method="GET" action="{% url 'products' %}">
