--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,6 +65,15 @@ button:hover {
     border-top: none !important;
 }
 
+.form-control:focus, 
+.form-control:active,
+.form-check-input:focus, 
+.form-check-input:active,
+.form-select:focus,
+.form-select:active {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+  border: 1px solid #529afe;
+}
 
 /* Navbar */
 #logo {
