--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,63 @@ h4 {
     text-transform: uppercase;
 }
 
+.caption {
+    font-size: 1.2rem;
+    color: #666;
+    text-transform: revert;
+}
+
+.modal-header {
+    border-bottom: none !important;
+}
+
+.modal-footer {
+    border-top: none !important;
+}
+
+.form-control:focus, 
+.form-control:active,
+.form-check-input:focus, 
+.form-check-input:active,
+.form-select:focus,
+.form-select:active {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+  border: 1px solid #529afe;
+}
+
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
+.update-link i,
+.remove-item i {
+    color: #666;
+    padding: 0 7px
+}
+
+.update-link i:hover,
+.remove-item i:hover {
+    color: #feb751;
+}
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 9999999999;
+}
+
+/* Modified from Surfdome */
+.promo-div {
+    padding: 20px 25px;
+    margin: 15px 0;
+    text-align: center;
+    background-color: #f8f7f5;
+    font-size: 1.1rem;
+}
+
+/* Links and buttons */
 a {
     text-decoration: none;
 }
@@ -43,30 +100,6 @@ button:hover {
 
 .btn-danger {
     text-transform: uppercase !important;
-}
-
-.caption {
-    font-size: 1.2rem;
-    color: #666;
-    text-transform: revert;
-}
-
-.modal-header {
-    border-bottom: none !important;
-}
-
-.modal-footer {
-    border-top: none !important;
-}
-
-.form-control:focus, 
-.form-control:active,
-.form-check-input:focus, 
-.form-check-input:active,
-.form-select:focus,
-.form-select:active {
-  box-shadow: 0 1px 3px 0 #cfd7df;
-  border: 1px solid #529afe;
 }
 
 /* Navbar */
@@ -134,167 +167,7 @@ footer a:hover {
     color: #feb751;
 }
 
-/* Gallery */
-.gallery img {
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.gallery-sm-img {
-    height: 200px;
-    margin-bottom: 20px;
-}
-
-.gallery-lg-img {
-    height: 420px;
-}
-
-.image-container {
-    position: relative;
-    width: 50%;
-}
-
-.image {
-    opacity: 1;
-    transition: .5s ease;
-    backface-visibility: hidden;
-}
-
-.image-grid-hover {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.image-container:hover .image {
-    opacity: 0.4;
-}
-
-.image-container:hover .image-grid-hover {
-    opacity: 1;
-}
-
-.text {
-    color: #30323d;
-}
-
-.text h3 {
-    text-transform: uppercase;
-    font-family: 'Archivo Black';
-    color: #30323d;
-    font-size: 4.5rem;
-}
-
-.gallery-btn {
-    border: 1px solid #30323d;
-    text-transform: uppercase;
-    background-color: #30323d;
-    color: #fff;
-}
-
-/* Products */
-a.category-badge>span.badge:hover {
-    color: #529afe !important;
-    border-style: solid !important;
-    border-color: #529afe !important;
-}
-
-.badge {
-    font-size: 100%;
-}
-
-#product-title {
-    font-size: 2.5rem;
-}
-
-/* Modified from Surfdome */
-.promo-div {
-    padding: 20px 25px;
-    margin: 15px 0;
-    text-align: center;
-    background-color: #f8f7f5;
-    font-size: 1.1rem;
-}
-
-/* Basket */
-
-.basket-item {
-    padding: 20px 0;
-}
-
-#basket-item-title {
-    font-size: 1.4rem;
-}
-
-.basket-summary {
-    border: 1px solid #e5e5e5;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.custom-size {
-    text-transform: uppercase;
-    font-size: 1.3rem;
-}
-
-.basket-buttons {
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.update-link,
-.remove-item {
-    cursor: pointer;
-}
-
-.update-link i,
-.remove-item i {
-    color: #666;
-    padding: 0 7px
-}
-
-.update-link i:hover,
-.remove-item i:hover {
-    color: #feb751;
-}
-
-.message-container {
-    position: fixed;
-    top: 72px;
-    right: 15px;
-    z-index: 9999999999;
-}
-
 /* Media Queries */
-@media (max-width: 425px) {
-    .gallery-sm-img {
-        height: 100px;
-        margin-bottom: 10px;
-    }
-
-    .gallery-lg-img {
-        height: 210px;
-    }
-
-    .product-info-container {
-        margin-top: 35px;
-    }
-
-    .text h3 {
-        font-size: 1.2rem;
-    }
-
-    .text span {
-        font-size: 0.7rem;
-    }
-}
-
 @media (max-width: 991px) {
     .header-container {
         padding-top: 180px;
@@ -307,18 +180,6 @@ a.category-badge>span.badge:hover {
 
     #top-nav {
         background-color: #30323d;
-    }
-
-    .image-container .image {
-        opacity: 0.4;
-    }
-    
-    .image-container .image-grid-hover {
-        opacity: 1;
-    }
-
-    .text h3 {
-        font-size: 1.4rem;
     }
 }
 
