--- a/templates/includes/toasts/toast-success.html
+++ b/templates/includes/toasts/toast-success.html
@@ -1,4 +1,4 @@
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+<div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
     <div class="toast-header text-success bg-white">
       <i class="fa-solid fa-circle-check"></i>
       <strong class="me-auto">Success!</strong>
@@ -10,7 +10,7 @@
           {{ message }}
         </div>
       </div>
-      {% if grand_total and not on_profile_page %}
+      {% if basket_items and not on_basket and not on_profile_page %}
       <div class="row">
         <div class="col mt-2">
           <p>Your Basket ({{ product_count }})</p>
@@ -19,14 +19,14 @@
       
         {% for item in basket_items %}
           <div class="row">
-            <div class="col-3">
+            <div class="col-md-3">
               {% if item.product.image %}
                 <img src="{{ item.product.image.url }}" class="card-img-top" alt="{{ product.name }}">
               {% else %}
                 <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
               {% endif %}
             </div>
-            <div class="col-9">
+            <div class="col-md-9">
               <p><strong>{{ item.product.name }}</strong></p>
               <p>Size: {% if item.product.men_sizes %}
                 {{ item.size|upper }}
@@ -38,7 +38,7 @@
           </div>
         {% endfor %}
         <div class="row">
-          <div class="col">
+          <div class="col-12 text-center">
             <strong><p>
               Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
               <span class="float-end">£{{ total|floatformat:2 }}</span>
@@ -46,11 +46,8 @@
             {% if free_delivery_delta > 0%}
               <p>Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!</p>
             {% endif %}
-            <a href="{% url 'view_basket' %}" class="btn btn-blue btn-lg basket-buttons">
-              <span>Go to secure checkout</span>
-              <span>
-                <i class="fa-solid fa-lock"></i>
-              </span>
+            <a href="{% url 'view_basket' %}" id="toast-button" class="btn btn-blue">
+              <span>Go to Shopping Basket</span>
             </a>
           </div>
         </div>
