Add anchor link to product title on products page

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -9,6 +9,10 @@ a.category-badge>span.badge:hover {
     font-size: 100%;
 }
 
+a .card-title {
+    color: #30323d;
+}
+
 #product-title {
     font-size: 2.5rem;
 }
