--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -83,7 +83,10 @@
                         </a>
                         {% endif %}
                         <div class="card-body pb-0 text-center">
-                            <h5 class="card-title">{{ product.name }}</h5>
+                            <a href="{% url 'product_detail' product.id %}">
+                                <h5 class="card-title">{{ product.name }}</h5>
+                            </a>
+                            
                         </div>
                         <div class="card-footer bg-white border-0 text-center">
                             <div class="row">
