--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -70,7 +70,7 @@
                 <form action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="row form-row mt-4">
-                        {% if product.men_sizes %}
+                        {% if product.category.name == 'mens_wetsuits' %}
                         <div class="col-sm-12 col-md-7">
                             <p class="small">Size*</p>
                             <select class="form-control form-select" name="product_size" id='id_product_size'>
@@ -82,7 +82,7 @@
                                 <option value="xl">XL</option>
                             </select>
                         </div>
-                        {% elif product.ladies_sizes %}
+                        {% elif product.category.name == 'ladies_wetsuits' %}
                         <div class="col-sm-12 col-md-6">
                             <p>Size*</p>
                             <select class="form-control form-select rounded-0" name="product_size" id='id_ladies_size'>
@@ -96,7 +96,7 @@
                                 <option value="18">18</option>
                             </select>
                         </div>
-                        {% elif product.shoe_sizes %}
+                        {% elif product.category.name == 'mens_footwear' or product.category.name == 'ladies_footwear'%}
                         <div class="col-sm-12 col-md-6">
                             <p>Size*</p>
                             <select class="form-control form-select rounded-0" name="product_size" id='id_shoe_size'>
@@ -113,7 +113,7 @@
                                 <option value="12">12</option>
                             </select>
                         </div>
-                        {% elif product.kids_sizes %}
+                        {% elif product.category.name == 'boys_wetsuits' or product.category.name == 'girls_wetsuits' %}
                         <div class="col-sm-12 col-md-6">
                             <p>Size*</p>
                             <select class="form-control form-select rounded-0" name="product_size" id='id_kids_size'>
@@ -126,7 +126,7 @@
                                 <option value="15-16">15-16</option>
                             </select>
                         </div>
-                        {% elif product.kids_shoe_sizes %}
+                        {% elif product.category.name == 'kids_footwear' %}
                         <div class="col-sm-12 col-md-6">
                             <p>Size*</p>
                             <select class="form-control form-select rounded-0" name="product_size"
