--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -77,6 +77,9 @@
                                                 <option value="10" {% if item.quantity == 10 %}selected{% endif %}>10
                                                 </option>
                                             </select>
+                                            {% if item.product.has_sizes %}
+                                            <input type="hidden" name="product_size" value="{{ item.size }}">
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </form>
