--- a/templates/403.html
+++ b/templates/403.html
@@ -15,13 +15,11 @@
 <!-- Error message and link back to home page -->
 <div class="container">
     <div class="row">
-        <div class="col-12">
-            <h2 class="text-center">Ooops that's forbidden</h2>
+        <div class="col-12 text-center error-page">
+            <h2 class="mb-3">Ooops that's forbidden</h2>
             <a href="{% url 'home' %}" class="btn btn-blue" aria-label="Link back to home page">Back to home page</a>
 
-        </div>
-        <!-- Report issue button -->
-        <div class="col-12">
+            <!-- Report issue button -->
             <a href="{% url 'contact' %}" class="btn btn-grey" aria-label="Link to contact page">Report an issue</a>
         </div>
     </div>
