--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,7 +16,6 @@ h4 {
 }
 
 .caption {
-    font-size: 1.2rem;
     color: #666;
     text-transform: revert;
 }
@@ -183,7 +182,7 @@ footer a:hover {
 
 /* Media Queries */
 @media (max-width: 425px) {
-    .error-pages a {
+    .action-buttons {
         margin-top: 15px;
     }
 }
