--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -110,7 +110,7 @@
             <section id="my-account" class="profile-section">
                 <div class="row">
                     <div class="col-12">
-                        <a href="" class="btn btn-blue">Change Password</a>
+                        <a href="{% url 'account_change_password' %}" class="btn btn-blue">Change Password</a>
                         
                     </div>
                 </div>
