--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,13 +4,15 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h2>{% trans "Change Password" %}</h2>
+{% block inner_content %}
+    <h2 class="text-center mb-4">{% trans "Change Password" %}</h2>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-blue" type="submit" name="action">{% trans "Change Password" %}</button>
-        <a class="btn btn-grey" href="{% url 'account_login' %}">Back to Login</a>
+        <div class="text-center">
+            <button class="btn btn-sm btn-blue mb-3" type="submit" name="action">{% trans "Change Password" %}</button>
+            <a class="btn btn-sm btn-grey mb-3" href="{% url 'profile' %}">Back to Profile</a>
+        </div>
     </form>
 {% endblock %}
